[workspace]
resolver = "2"
members = ["backend", "frontend"]
default-members = [".", "backend", "frontend"]


[package]
name = "kivnun"
publish = false
version = "0.1.0"
authors = ["Idan Arye <idanarye@weka.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dioxus = { version = "0.6.0" }

backend = { path = "backend" }

[dependencies]
dioxus = { workspace = true }
frontend = { path = "frontend" }

[features]
default = ["web"]
web = ["dioxus/web"]
#desktop = ["dioxus/desktop"]
#mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
