[workspace]
resolver = "2"
members = ["backend", "frontend"]
default-members = [".", "backend", "frontend"]


[package]
name = "kivnun"
publish = false
version = "0.1.0"
authors = ["Idan Arye <idanarye@weka.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dioxus = { version = "0.6.3" }
axum = { version = "0.7.9", features = ["ws"] }

frontend = { path = "frontend" }
backend = { path = "backend" }

[dependencies]
axum = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-fullstack = { version = "0.6.3", optional = true }
dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }
dioxus-cli-config = { version = "0.6.3", optional = true }
frontend = { workspace = true }
backend = { workspace = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
tracing = "0.1.41"

[features]
default = []
web = [
    "dioxus/web",
    "dioxus-web",
]
server = [
    "axum",
    "tokio",
    "dioxus/fullstack",
    "dioxus-fullstack/axum",
    "dioxus-cli-config",
    "backend/server",
]
#desktop = ["dioxus/desktop"]
#mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
