[package]
name = "backend"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
axum = { workspace = true, optional = true }
tracing = "0.1.41"
kameo = "0.16.0"
futures = "0.3.31"
jsonrpsee-types = "0.24.9"
serde = "1.0.219"
serde_json = "1.0.140"

[features]
server = [
    "axum",
]
